# av-guide

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  mypy.ini  ruff.toml
.claude/commands/: digitalize.md
.github/workflows/: ci.yml  deploy-pages.yml
data-pipeline/: CLAUDE.md  dict-ratchet.sh
data-pipeline/fetch-pois/: README.md
data-pipeline/parse-routes/: README.md  pyproject.toml
digitize-av-guide/: README.md  pyproject.toml
digitize-av-guide/pipeline/: extract.py
docs/adr/: 0001-entry-place-route-model.md  0002-destination-and-place-ids.md  0003-deploy-static-snapshot-to-github-pages.md  0004-reflow-in-clean-stage.md  0005-traverse-entry-kind.md
docs/research/: 2026-07-17-peak-labels-on-3d-map.md  map-rendering-options.md
fetch-mountain-poi/: README.md  pyproject.toml
fetch-mountain-poi/pipeline/: config.py  gazetteer.py  match.py  plan.py
fetch-mountain-poi/tests/: conftest.py  test_adjudicate.py  test_gazetteer.py  test_match.py  (+1 more)
fetch-pois/: README.md  pyproject.toml
fetch-pois/.claude/commands/: fetch-pois.md
fetch-pois/pipeline/: config.py  gazetteer.py  match.py  plan.py
fetch-pois/tests/: conftest.py  test_adjudicate.py  test_cli.py  test_gazetteer.py  test_match.py
fetch-pois/tests/fixtures/: routes.jsonl
guides/: guides.json
parse-routes/: README.md  pyproject.toml
parse-routes/pipeline/: config.py  extract.py  merge.py  plan.py
parse-routes/tests/: conftest.py  test_cli.py  test_merge.py
pipeline/: __init__.py  config.py  merge.py  plan.py
route-map/: CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+123 files in other folders)
