[project]
name = "av-guide"
version = "0.1.0"
description = "Digitalize the scanned Alpenvereinsführer Wetterstein (Beulke, 4. Auflage 1996) into structured route data."
requires-python = ">=3.13"
dependencies = [
    # Stages 2 and 3 shell out to the `claude` CLI (Claude Code) — no Python SDK needed.
    "pymupdf>=1.24",
]

[tool.uv]
package = false
