[project]
name = "fetch-pois"
version = "0.1.0"
description = "Resolve mountain POIs from parsed AV-guide routes to OpenStreetMap coordinates."
requires-python = ">=3.13"
dependencies = [
    "rapidfuzz>=3.14.5",
    "pyyaml>=6",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
# Make the `pipeline` package importable so tests can call step functions
# directly (tests/ is auto-added for conftest/test cross-imports).
pythonpath = ["."]

[tool.uv]
package = false
